# chronox-tui

./: Cargo.toml  README.md  install.sh
docs/superpowers/plans/: 2026-06-08-chronox-tui.md  2026-06-08-side-by-side-diff-toggle.md  2026-06-10-grouped-by-file-timeline.md
docs/superpowers/specs/: 2026-06-08-chronox-tui-design.md  2026-06-08-open-file-in-editor-design.md  2026-06-08-side-by-side-diff-toggle-design.md  2026-06-10-grouped-by-file-timeline-design.md
src/: app.rs  input.rs  main.rs  render.rs  ui.rs
